# video-publisher

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
ai-backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
ai-backend/app/: config.py  logging_config.py  main.py  metrics.py
ai-backend/app/api/: avatar.py  creator.py  director.py  health.py  quality.py  research.py  sources.py  subtitles.py  tts.py
ai-backend/app/models/: director.py  job.py  quality_report.py  reference_analysis.py  research.py  research_brief.py  review.py  storyboard.py
ai-backend/app/niche_profiles/: registry.py
ai-backend/app/rag/: chunker.py  db.py  embeddings.py  ingestion.py
ai-backend/app/services/: asset_validator.py  ffprobe_service.py  piper_tts.py  post_render_analyzer.py  reference_analyzer.py  video_downloader.py  wav2lip_service.py  whisper_local.py
ai-backend/tests/: conftest.py  test_health.py  test_models.py
ai-backend/tests/test_director/: conftest.py  test_creator_mode.py  test_models.py  test_prompts.py  test_seo.py  test_worker_mode.py
ai-backend/tests/test_niche_profiles/: test_registry.py
ai-backend/tests/test_piper/: test_piper_tts.py
ai-backend/tests/test_quality/: test_asset_validator.py  test_ffprobe_quality.py  test_models.py  test_post_render_analyzer.py
ai-backend/tests/test_quality_reviewer/: test_reviewer.py
ai-backend/tests/test_reference/: test_ffprobe_service.py  test_models.py  test_reference_analyzer.py
ai-backend/tests/test_researcher/: test_dedup.py  test_job_handler.py  test_models.py  (+3 more)
(+507 files in other folders)
