[project]
name = "ai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "crewai>=0.80.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "openai>=1.30.0",
    "redis[asyncio]>=5.0.0",
    "httpx>=0.27.0",
    # Researcher Agent deps
    "feedparser>=6.0.0",
    "PyYAML>=6.0.0",
    "newsapi-python>=0.2.7",
    "pytrends>=4.9.0",
    "prometheus-client>=0.25.0",
    "langgraph-checkpoint-redis>=0.0.6",
    "langchain-openai>=0.1.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "faster-whisper>=1.0.0",
    # FEATURE-06: Reference Video Analysis
    "yt-dlp>=2024.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "fakeredis>=2.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[tool.uv]
package = false
